--- a/Entrega IV/08.Filosofia.tex
+++ b/Entrega IV/08.Filosofia.tex
@@ -1,43 +1,44 @@
 
     \section{La visión artística de Schoenberg}
-    En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunció a su discípulo Josef Rufer \cite{quote1}:
+    En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg hizo el siguiente anuncio a su discípulo Josef Rufer \cite{quote1}:
     \begin{quote}
     	\textit{He realizado un descubrimiento que asegurará la supremacía de la música alemana durante los próximos cien años.}
     \end{quote}
 
-    Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los sistemas tonales desde hacía siglos. Para él, la naturalidad del sistema dodecafónico residía en que era un paso más en el proceso musical histórico: desde el contrapunto y el desarrollo motívico, practicado por los grandes maestros de la tradición alemana, hasta la disolución de la tonalidad, anticipada por la música postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la música. En palabras de Schoenberg \cite{scho}:
+    Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los distintos sistemas tonales desde hacía siglos. Para él, la naturalidad del sistema dodecafónico residía en que era un paso más en el proceso musical histórico: desde el contrapunto y el desarrollo motívico, practicado por los grandes maestros de la tradición alemana, hasta la disolución de la tonalidad, anticipada por la música postwagneriana e impresionista. Todo era parte de un continuo, del desarrollo de la historia de la música. En palabras de Schoenberg \cite{scho}:
     \begin{quote}
-    	\textit{Yo creo que la composición con doce sonidos y la que muchos llaman erróneamente ``música atonal'', no es el final de un viejo período, sino el comienzo de otro nuevo. Una vez más, como hace dos siglos, hay algo a lo que se llama anticuado; y una vez más, no se trata de ninguna obra en particular, [...] % ni de varias obras de determinado compositor; de nuevo, no es la mayor o menor maestría de tal compositor, 
+    	\textit{Yo creo que la composición con doce sonidos, y la que muchos llaman erróneamente ``música atonal'', no es el final de un viejo período, sino el comienzo de otro nuevo. Una vez más, como hace dos siglos, hay algo a lo que se llama anticuado; y una vez más, no se trata de ninguna obra en particular, [...] % ni de varias obras de determinado compositor; de nuevo, no es la mayor o menor maestría de tal compositor, 
     	sino que otra vez sucede que es un estilo el condenado al ostracismo. %Vuelve a darse a sí misma la denominación de Música Nueva [...]
     }
     \end{quote}
 
-	Tras la muerte de Schoenberg en 1951, y durante algunas décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes (véase \cite{celia2}), pero pronto se desvaneció de las salas de conciertos. El serialismo siempre se consideró una música académica, difícil de entender, apenas musical sino teórica. La complejidad de percibir esta música meramente por su estructura formal impidió, y todavía impide, que se disfrutara más allá de su estudio. Schoenberg intentó eximirse culpando al oyente, quien él creyó que no se esforzaba lo suficiente \cite{scho}:
+	Tras la muerte de Schoenberg en 1951, y durante algunas décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes (véase \cite{celia2}), pero pronto se desvaneció de las salas de conciertos. El serialismo siempre se consideró una música académica, difícil de entender, apenas musical sino teórica. La complejidad de percibir esta música meramente por su estructura formal impidió, y todavía impide, que se disfrutara más allá de su estudio. Schoenberg intentó eximirse de culpa y a su vez culpó al oyente, quien según él creyó que no se esforzaba lo suficiente \cite{scho}:
 	
 	\begin{quote}
 		\textit{La composición con doce sonidos no tiene otra finalidad que la comprensión.
 			A la vista de ciertos acontecimientos en la historia musical reciente, 
-			ésto puede causar asombro, ya que las obras escritas en este estilo no han sido entendidas %a pesar del nuevo medio de organización. %Por lo que, si nos olvidáramos de que nuestros contemporáneos no son los últimos jueces, sino que la historia es generalmente la que predomina, habríamos de considerar condenado este método. Pero, si bien parece aumentar las dificultades para el oyente, ésto se compensa con las penalidades del compositor. Porque no resulta fácil el componer de esta forma, sino diez veces más difícil; 
+			esto puede causar asombro, ya que las obras escritas en este estilo no han sido entendidas %a pesar del nuevo medio de organización. %Por lo que, si nos olvidáramos de que nuestros contemporáneos no son los últimos jueces, sino que la historia es generalmente la que predomina, habríamos de considerar condenado este método. Pero, si bien parece aumentar las dificultades para el oyente, ésto se compensa con las penalidades del compositor. Porque no resulta fácil el componer de esta forma, sino diez veces más difícil; 
 			[...] Solo el compositor perfectamente preparado será quien componga para el oyente musical igualmente bien dispuesto.}
 	\end{quote}
 	
 	Al contrario de lo que Schoenberg creía, incluso el \textit{oyente experto}, el que describe T. W. Adorno en su ``Introducción a la sociología de la música'' \cite{adorno}, tiene grandes dificultades para distinguir auditivamente todos los elementos que caracterizan el serialismo. Somos capaces de retener, a lo sumo, motivos de seis o siete notas, pero no de doce \cite{sevenpm2}; mucho menos de reconocer si una serie es transformación de otra. ¿En qué medida afectan las reglas dodecafónicas al discurso sonoro de una pieza?
 	
-	El dodecafonismo puede atribuirse el haber prescindido de algunas de las preconcepciones musicales más arraigadas, como la melodía, la consonancia o la tonalidad. Pero precisamente por eso es impopular, porque toma la disonancia y la pone al frente de toda la composición. Para Schoenberg, la aprobación del público no era el objetivo de su arte, y, de hecho, el desagrado colectivo era un signo del alto nivel artístico y espiritual al que se encontraba \cite{scho}:
+	El dodecafonismo puede atribuirse el haber prescindido de algunas de las preconcepciones musicales más arraigadas, como la melodía, la consonancia o la tonalidad. Pero precisamente por eso es impopular, porque toma la disonancia y la pone al frente de toda la composición. Para Schoenberg, la aprobación del público no era el objetivo de su arte, y, de hecho, el desagrado colectivo era un signo del alto nivel artístico y 
+	espiritual~\cite{scho}:
 	
 %	\begin{quote}
 %		\emph{La belleza es una necesidad de los mediocres.}%\footnote{A. Schoenberg, \emph{Harmonielehre}, 1922.}
 %	\end{quote}
 	\begin{quote}
-		\emph{El valor de mercado es irrelevante para el valor intrínseco. Un juicio no cualificado puede como máximo decidir el valor de mercado \textemdash un valor que puede ser inversamente proporcional al valor intrínseco.}%\footnote{A. Schoenberg, \emph{An Artistic Impression} (1909) en \emph{Style and Idea}, 1985.}
+		\emph{El valor de mercado es irrelevante para el valor intrínseco (de la música). Un juicio no cualificado puede como máximo decidir el valor de mercado \textemdash un valor que puede ser inversamente proporcional al valor intrínseco.}%\footnote{A. Schoenberg, \emph{An Artistic Impression} (1909) en \emph{Style and Idea}, 1985.}
 	\end{quote}
 	\begin{quote}
-		\emph{Ningún artista, ningún poeta, ningún filósofo y ningún músico, cuyo pensamiento se desenvuelve en la más alta esfera, habrá de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como ``Arte para todos''. Porque si es arte no será para todos, y si es para todos no será arte.}%\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
+		\emph{Ningún artista, ningún poeta, ningún filósofo y ningún músico, cuyo pensamiento se desenvuelva en la más alta esfera, habrá de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como ``Arte para todos''. Porque si es arte no será para todos, y si es para todos no será arte.}%\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
 	\end{quote}
 	
 	Sin embargo, el rechazo a no ser rechazado ha dejado de tener cabida en nuestro contexto artístico. El academicismo ya no es excluyente a la divulgación o a la búsqueda de belleza sensorial. De las técnicas serialistas se puede tomar aquello que es interesante intelectualmente e incorporarlo a otras técnicas.
 	
-	Este es el experimento que he querido proponer: despojar al serialismo de uno de los elementos que provoca más rechazo: la disonancia extrema. Ya que esta proviene del cromatismo, el propósito del experimento es utilizar escalas que tengan menos intervalos de semitono para crear con ellas un \textit{pseudo-serialismo} de menos notas. 
+	Este es el experimento que he querido, con humildad, proponer: despojar al serialismo de uno de los elementos que provoca más rechazo: la disonancia extrema. Ya que esta proviene del cromatismo, el propósito del experimento es utilizar escalas que tengan menos intervalos de semitono para crear con ellas un \textit{pseudo-serialismo} de menos notas. 
 	
 	Se han modificado las notas de varias obras dodecafónicas ya existentes, mientras que el ritmo, la duración, el timbre y las dinámicas, que siguen siendo producto de los compositores originales, se han dejado intactas. El propósito final es intentar conservar la estructura matemática subyacente renovando, en cambio, la percepción colectiva de estas músicas.
 	
