--- a/Entrega IV/10.Modificaciones.tex
+++ b/Entrega IV/10.Modificaciones.tex
@@ -4,26 +4,30 @@
 Las escalas escogidas para este experimento son cuatro escalas de distintos tamaños y sonoridades; desde el sonido oriental hasta el occidental clásico, pasando por el jazz moderno y el impresionismo.
 Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de do mayor y la escala octotónica. Estas son las funciones inducidas de dichas escalas según el algoritmo:
 
-\[\left.\begin{array}{*{13}c}
-\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-\text{Pentatónica (5):}&0&0&2&2&4&4&7&7&7&9&9&12\\
-\text{Intervalos:}&&2&&2&&3&&&2&&3&\\
-\end{array}\right.\]		
-\[\left.\begin{array}{*{13}c}
-\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-\text{Tonos enteros (6):}&0&0&2&2&4&4&6&6&8&8&10&10\\
-\text{Intervalos:}&&2&&2&&2&&2&&2&&2\\
-\end{array}\right.\]
-\[\left.\begin{array}{*{13}c}
-\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-\text{Diatónica en do (7):}&0&0&2&2&4&5&5&7&7&9&9&11\\
-\text{Intervalos:}&&2&&2&1&&2&&2&&2&1\\
-\end{array}\right.\]        
-\[\left.\begin{array}{*{13}c}
-\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
-\text{Octotónica (8):}&0&0&2&3&3&5&6&6&8&9&9&11\\
-\text{Intervalos:}&&2&1&&2&1&&2&1&&2&1\\
-\end{array}\right.\]
+\begin{center}
+\includegraphics[width=12cm]{Fotos/Re-escalando-musica-fig-3.png}
+\end{center}
+
+%\[\left.\begin{array}{*{13}c}
+%\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
+%\text{Pentatónica (5):}&0&0&2&2&4&4&7&7&7&9&9&12\\
+%\text{Intervalos:}&&2&&2&&3&&&2&&3&\\
+%\end{array}\right.\]		
+%\[\left.\begin{array}{*{13}c}
+%\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
+%\text{Tonos enteros (6):}&0&0&2&2&4&4&6&6&8&8&10&10\\
+%\text{Intervalos:}&&2&&2&&2&&2&&2&&2\\
+%\end{array}\right.\]
+%\[\left.\begin{array}{*{13}c}
+%\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
+%\text{Diatónica en do (7):}&0&0&2&2&4&5&5&7&7&9&9&11\\
+%\text{Intervalos:}&&2&&2&1&&2&&2&&2&1\\
+%\end{array}\right.\]        
+%\[\left.\begin{array}{*{13}c}
+%\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
+%\text{Octotónica (8):}&0&0&2&3&3&5&6&6&8&9&9&11\\
+%\text{Intervalos:}&&2&1&&2&1&&2&1&&2&1\\
+%\end{array}\right.\]
 
 	\subsection{Obras modificadas}
 	
@@ -37,28 +41,51 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
 	
 	La primera obra que pasará por el algoritmo de modificación serial es la \textit{Suite para piano}, Op. 25 de Schoenberg. Un análisis de esta pieza y de su contexto histórico se puede encontrar en \cite{celia1}.
 	
-	Su \href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/schoenberg/schoenberg04.pc.krn}{serie principal} es: \drow{4,5,7,1,6,3,8,2,11,0,9,10}
-\begin{center}
-		\ddiagram{4,5,7,1,6,3,8,2,11,0,9,10}
+	Su \href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/schoenberg/schoenberg04.pc.krn}{serie principal} es: 
+	\begin{center}
+\includegraphics[width=7.5cm]{Fotos/Re-escalando-musica-fig-4.png}
 \end{center}
+
+%	\drow{4,5,7,1,6,3,8,2,11,0,9,10}
+
+	\begin{center}
+\includegraphics[width=4cm]{Fotos/Re-escalando-musica-fig-5.png}
+\end{center}
+
+%\begin{center}
+%		\ddiagram{4,5,7,1,6,3,8,2,11,0,9,10}
+%\end{center}
 	
 	La segunda obra es un arreglo para soprano y piano de una de las arias más destacadas de la segunda ópera de Alban Berg, \textit{Lulu}. El libreto de la obra está basado en dos tragedias de Frank Wedekind: ``El espíritu de la tierra'' y ``La Caja de Pandora''.
 	
 	El aria, llamada \textit{Lied der Lulu}, es parte de una dramática disputa entre Lulu y su marido por las infidelidades de ella, que acaba con el homicidio accidental de él.
 	
 	La \href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg10.pc.krn}{serie} de Lulu es:
-		\drow{0,4,5,2,7,9,6,8,11,10,3,1}
-\begin{center}
-		\ddiagram{0,4,5,2,7,9,6,8,11,10,3,1}
+	\begin{center}
+\includegraphics[width=7.5cm]{Fotos/Re-escalando-musica-fig-6.png}
 \end{center}
+
+%		\drow{0,4,5,2,7,9,6,8,11,10,3,1}
+	\begin{center}
+\includegraphics[width=4cm]{Fotos/Re-escalando-musica-fig-7.png}
+\end{center}
+%\begin{center}
+%		\ddiagram{0,4,5,2,7,9,6,8,11,10,3,1}
+%\end{center}
 	
 	La tercera, de 1936, es la única obra publicada de Anton Webern para piano solo: \textit{Variationen für Klavier}, Op. 27, y se compone de tres movimientos: \textit{Sehr mässig}, \textit{Sehr schnell} y \textit{Ruhig fliessend}.
 	
 	Su \href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern17.pc.krn}{serie principal} es:
-		\drow{3,11,10,2,1,0,6,4,7,5,9,8}
-\begin{center}
-		\ddiagram{3,11,10,2,1,0,6,4,7,5,9,8}
+		\begin{center}
+\includegraphics[width=7.5cm]{Fotos/Re-escalando-musica-fig-8.png}
 \end{center}
+%		\drow{3,11,10,2,1,0,6,4,7,5,9,8}
+	\begin{center}
+\includegraphics[width=4cm]{Fotos/Re-escalando-musica-fig-9.png}
+\end{center}
+%\begin{center}
+%		\ddiagram{3,11,10,2,1,0,6,4,7,5,9,8}
+%\end{center}
     
     \subsection{Programa \textit{online} de modificación de partituras}
 	He creado una página web \textit{online} que transforma cada nota de una partitura a cualquier nota requerida, una a una. Este \textit{software} sirve para no tener que modificar a mano las partituras del experimento, pero también puede servir para otros propósitos. Por ejemplo, para cambiar una partitura de mayor a menor, o viceversa.
@@ -70,7 +97,7 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
    	 La aplicación web se encuentra en el siguiente enlace: \url{https://modificaciones.netlify.com/}. Sus instrucciones de uso se encuentran al final de la página web.
     
     \section{Conclusiones}
-    Todas las conclusiones que se pueden extraer de este experimento son enteramente subjetivas. El objetivo de realizarlo es poder seguir investigando con las propiedades matemáticas de la música, y analizar el impacto emocional que éstas pueden causar.
+    Todas las conclusiones que se pueden extraer de este experimento son enteramente subjetivas. El objetivo de realizarlo es poder seguir investigando con las propiedades matemáticas de la música, y analizar el impacto emocional que estas pueden causar.
     
     No se puede afirmar que la transformación mejore o empeore ninguna obra. En todo caso podemos interpretar qué transformaciones tienen un determinado sentido musical o estético, dependiendo de la escala utilizada o del estilo con el que estén compuestas.     
     Tampoco debemos olvidar que el cromatismo siempre aportará a las obras una dimensión añadida, un elemento extra que ha impulsado gran parte de la innovación en la historia de la música. Quitarlo por completo es, en realidad, retroceder en la evolución del arte.
