--- a/Entrega IV/10.Modificaciones.tex
+++ b/Entrega IV/10.Modificaciones.tex
@@ -102,7 +102,7 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
     No se puede afirmar que la transformación mejore o empeore ninguna obra. En todo caso podemos interpretar qué transformaciones tienen un determinado sentido musical o estético, dependiendo de la escala utilizada o del estilo con el que estén compuestas.     
     Tampoco debemos olvidar que el cromatismo siempre aportará a las obras una dimensión añadida, un elemento extra que ha impulsado gran parte de la innovación en la historia de la música. Quitarlo por completo es, en realidad, retroceder en la evolución del arte.
    	
-   	En general, las transformaciones hexatónica y octotónica siguen conservando mucho del cromatismo que tiene la partitura original. Siguen sonando ajenas al oído tonal del oyente medio. Vamos a comentar algunas de las impresiones que generan las otras dos transformaciones en cada una de las obras, aunque dejaremos al lector que forme su propia opinión.
+   	En general, las transformaciones hexatónica (6) y octotónica (8) siguen conservando mucho del cromatismo que tiene la partitura original. Siguen sonando ajenas al oído tonal del oyente medio. Vamos a comentar algunas de las impresiones que generan las otras dos transformaciones en cada una de las obras, aunque dejaremos al lector que forme su propia opinión.
    	
     \subsection{Obra de Berg: Lied der Lulu}
 	El estilo compositivo de Berg busca, en su mayor parte, acercarse a las formas tonales; maneja la falta de tonalidad serialista sin deshacerse de muchos elementos de la tradición musical. Sus melodías son fluidas y su fraseo inicia a conversar. Así, la transformación pentatónica (5) queda, quizás, algo simplista y repetitiva, y es en cambio la heptatónica (7) la que nos traslada a sonoridades más familiares.
@@ -122,7 +122,7 @@ Son la escala pentatónica, la escala de tonos enteros, la escala heptafónica de 
     
     Por otro lado, la elección concreta de la función transformativa, que hace predominar las notas do y sol \textemdash que aparecen en la nueva serie una vez más que el resto de notas\textemdash~provoca que, en muchos casos, la obra simule estar en do mayor. Como en la partitura original predomina el intervalo de tritono re $\flat$ \textendash~sol, la transformación da peso al intervalo de quinta justa, que es la base de la armonía tradicional.
     
-    La transformación heptatónica sigue dejando alguna disonancia debido a la existencia de semitonos entre las notas mi \textendash~fa y si \textendash~ do, y al tritono en fa \textendash~si. Al ser una obra ampliamente textural, muchos de estos intervalos aparecen con frecuencia.
+    La transformación heptatónica (7) sigue dejando alguna disonancia debido a la existencia de semitonos entre las notas mi \textendash~fa y si \textendash~do, y al tritono en fa \textendash~si. Al ser una obra ampliamente textural, muchos de estos intervalos aparecen con frecuencia.
     
     \url{https://soundcloud.com/celiarubio/sets/schoenberg-op25-1-prelude}
     
