--- a/Entrega IV/Re-escalando-musica.tex
+++ b/Entrega IV/Re-escalando-musica.tex
@@ -66,7 +66,7 @@
 \begin{document}
 \maketitle
 
-Tras la serie de artículos {\it Serialismo y matemática} que ha ido de  septiembre a noviembre de 2019, Celia Rubio, su autora, me presentó un cuarto texto, {\it Re-escalando música}. Este texto constituye la columna de diciembre de 2019. Es de nuevo una inmensa fortuna contar con la colaboración de Celia Rubio. Dejamos al lector con el placer de su escritura y concepto.
+Tras la serie de artículos {\it Serialismo y matemáticas} que ha ido de  septiembre a noviembre de 2019, Celia Rubio, su autora, me presentó un cuarto texto, {\it Re-escalando música}. Este texto constituye la columna de diciembre de 2019. Es de nuevo una inmensa fortuna contar con la colaboración de Celia Rubio. Dejamos al lector con el placer de su escritura y concepto.
 
 %Este artículo es el tercero y último de la colección {\it Serialismo y matemáticas}. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para esta música,  la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
 
